finalize testing of search features

--- a/download_feature_vectors.ipynb
+++ b/download_feature_vectors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filenames = [os.path.basename(f).split('.jpg')[0] for f in filelist]\n",
@@ -116,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_transforms = transforms.Compose([\n",
@@ -129,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "image_utils.save_feature_vectors_from_model(filelist, feature_path, model_last, data_transforms)"
@@ -145,7 +151,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = torchvision.models.resnet152(pretrained=True)\n",
@@ -155,8 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "feature_path = './test_features/dresses_sample/resnet_orig_2048/'\n",
@@ -167,7 +177,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get PCA From Original ResNet152"
+    "# Get PCA From ResNet152"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_path = './test_features/dresses_sample/resnet_retrained/'\n",
+    "resnet_retrained_feats = np.array([np.load(f) for f in glob.glob(feature_path + '*.npy')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "resnet_retrained_feats_std = scaler.fit_transform(resnet_retrained_feats)"
    ]
   },
   {
@@ -178,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "(500, 2048)"
+       "(500, 32)"
       ]
      },
      "execution_count": 31,
@@ -187,60 +219,54 @@
     }
    ],
    "source": [
-    "resnet_orig_feats = np.array([np.load(f) for f in glob.glob(feature_path + '*.npy')])\n",
-    "resnet_orig_feats.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "scaler = StandardScaler()\n",
-    "resnet_feats_std = scaler.fit_transform(resnet_orig_feats)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(500, 128)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sklearn_pca = PCA(n_components=128)\n",
-    "resnet_feats_pca = sklearn_pca.fit_transform(resnet_feats_std)\n",
+    "sklearn_pca = PCA(svd_solver='full', n_components=32)\n",
+    "resnet_feats_pca = sklearn_pca.fit_transform(resnet_retrained_feats_std)\n",
     "resnet_feats_pca.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 52.6195755 ,  41.55685425,  40.03969193,  32.71588516,\n",
+       "        23.00945854,  21.33922195,  19.52515602,  18.64884186,\n",
+       "        16.78881073,  16.18824577,  15.12319756,  14.117589  ,\n",
+       "        13.00993538,  12.89759541,  12.00266361,  11.82472706,\n",
+       "        11.39754105,  11.03301239,  10.60323715,  10.54831886,\n",
+       "        10.36052799,  10.29282856,  10.12097168,   9.59531116,\n",
+       "         9.56508064,   9.44876289,   9.39140511,   9.0709486 ,\n",
+       "         9.05137539,   8.97712803,   8.95532036,   8.80162907], dtype=float32)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn_pca.explained_variance_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "pca_feature_path = './test_features/dresses_sample/resnet_pca_128/'\n",
+    "pca_feature_path = './test_features/dresses_sample/resnet_retrained_pca_32/'\n",
     "if not os.path.exists(pca_feature_path):\n",
     "    os.makedirs(pca_feature_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -255,6 +281,28 @@
    "metadata": {},
    "source": [
     "# Get Features From Akiwi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded 0 / 500\n",
+      "Downloaded 100 / 500\n",
+      "Downloaded 200 / 500\n",
+      "Downloaded 300 / 500\n",
+      "Downloaded 400 / 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_path = './test_features/dresses_sample/akiwi_114/'\n",
+    "image_utils.download_feature_vectors_114(filelist, feature_path)"
    ]
   },
   {
@@ -275,8 +323,30 @@
     }
    ],
    "source": [
-    "feature_path = './test_features/dresses_sample/akiwi_114/'\n",
-    "image_utils.download_feature_vectors_114(filelist, feature_path)"
+    "feature_path = './test_features/dresses_sample/akiwi_50/'\n",
+    "image_utils.download_feature_vectors(filelist, feature_path, feature_size=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded 0 / 500\n",
+      "Downloaded 100 / 500\n",
+      "Downloaded 200 / 500\n",
+      "Downloaded 300 / 500\n",
+      "Downloaded 400 / 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_path = './test_features/dresses_sample/akiwi_64/'\n",
+    "image_utils.download_feature_vectors(filelist, feature_path, feature_size=64)"
    ]
   },
   {
