added search pipeline

--- a/StarGAN.ipynb
+++ b/StarGAN.ipynb
@@ -339,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = image_utils.get_image_feature_by_image(img, 2000)"
