implement search utils

--- a/download_feature_vectors.ipynb
+++ b/download_feature_vectors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -39,28 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data_path = './test_images/dresses_sample/*.jpg'"
+    "data_path = '../../data/fashion_models/dresses/*.jpg'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num images:  500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read data\n",
     "filelist = glob.glob(data_path)\n",
@@ -70,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -182,8 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "feature_path = './test_features/dresses_sample/resnet_retrained/'\n",
@@ -192,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -204,20 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(500, 32)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sklearn_pca = PCA(svd_solver='full', n_components=32)\n",
     "resnet_feats_pca = sklearn_pca.fit_transform(resnet_retrained_feats_std)\n",
@@ -226,34 +209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 52.6195755 ,  41.55685425,  40.03969193,  32.71588516,\n",
-       "        23.00945854,  21.33922195,  19.52515602,  18.64884186,\n",
-       "        16.78881073,  16.18824577,  15.12319756,  14.117589  ,\n",
-       "        13.00993538,  12.89759541,  12.00266361,  11.82472706,\n",
-       "        11.39754105,  11.03301239,  10.60323715,  10.54831886,\n",
-       "        10.36052799,  10.29282856,  10.12097168,   9.59531116,\n",
-       "         9.56508064,   9.44876289,   9.39140511,   9.0709486 ,\n",
-       "         9.05137539,   8.97712803,   8.95532036,   8.80162907], dtype=float32)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sklearn_pca.explained_variance_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -266,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -285,43 +250,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloaded 0 / 500\n",
-      "Downloaded 100 / 500\n",
-      "Downloaded 200 / 500\n",
-      "Downloaded 300 / 500\n",
-      "Downloaded 400 / 500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "feature_path = './test_features/dresses_sample/akiwi_114/'\n",
-    "image_utils.download_feature_vectors_114(filelist, feature_path)"
+    "feature_path = '../../data/features/fashion_models/dresses/64/'\n",
+    "image_utils.download_feature_vectors(filelist, feature_path, feature_size=64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloaded 0 / 500\n",
-      "Downloaded 100 / 500\n",
-      "Downloaded 200 / 500\n",
-      "Downloaded 300 / 500\n",
-      "Downloaded 400 / 500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "feature_path = './test_features/dresses_sample/akiwi_50/'\n",
     "image_utils.download_feature_vectors(filelist, feature_path, feature_size=50)"
@@ -329,21 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloaded 0 / 500\n",
-      "Downloaded 100 / 500\n",
-      "Downloaded 200 / 500\n",
-      "Downloaded 300 / 500\n",
-      "Downloaded 400 / 500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "feature_path = './test_features/dresses_sample/akiwi_64/'\n",
     "image_utils.download_feature_vectors(filelist, feature_path, feature_size=64)"
